fix: support multiple file formats.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Preview strings containing escape sequences like \\n, \\t, and \\r in JSON files, and other formats.",
   "version": "1.0.0",
   "publisher": "deng-wt",
+  "icon": "image/icon/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/Albert-Vanderboom/escape-buster"
@@ -23,6 +24,9 @@
     "preview",
     "format",
     "json"
+  ],
+  "activationEvents": [
+    "onStartupFinished"
   ],
   "main": "./dist/extension.js",
   "contributes": {
